novo main no downloader para este correr o maximo de tempo possivel